<resources>
    <string name="app_name">ViFit</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_register">Get Started</string>
    <string name="field_hint_email">e-mail</string>
    <string name="field_hint_password">password</string>
    <string name="msg_signin_success">Sign in successful!</string>
    <string name="msg_signin_failed">Sign in failed!</string>
    <string name="field_hint_age">age</string>
    <string name="text_label_sex">sex</string>
    <string name="btn_male">male</string>
    <string name="btn_female">female</string>
    <string name="field_hint_weight">weight</string>
    <string name="btn_unit_lbs">pounds</string>
    <string name="btn_unit_kg">kilograms</string>
    <string name="btn_done_regis">All Done!</string>
</resources>
